--- a/ch07-02-defining-modules-to-control-scope-and-privacy.html
+++ b/ch07-02-defining-modules-to-control-scope-and-privacy.html
@@ -190,7 +190,7 @@ work in the kitchen, dishwashers clean up, and managers do administrative work.<
 organize the functions into nested modules. Create a new library named
 <code>restaurant</code> by running <code>cargo new --lib restaurant</code>; then put the code in
 Listing 7-1 into <em>src/lib.rs</em> to define some modules and function signatures.</p>
-<p><span class="filename">Filename: src/lib.rs</span></p>
+<p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">mod front_of_house {
     mod hosting {
         fn add_to_waitlist() {}
