--- a/ch12-01-accepting-command-line-arguments.html
+++ b/ch12-01-accepting-command-line-arguments.html
@@ -196,7 +196,7 @@ about iterators: iterators produce a series of values, and we can call the
 containing all the elements the iterator produces.</p>
 <p>Use the code in Listing 12-1 to allow your <code>minigrep</code> program to read any
 command line arguments passed to it and then collect the values into a vector.</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">use std::env;
 
 fn main() {
@@ -256,7 +256,7 @@ chapter, we’ll ignore it and save only the two arguments we need.</p>
 able to access the values specified as command line arguments. Now we need to
 save the values of the two arguments in variables so we can use the values
 throughout the rest of the program. We do that in Listing 12-2.</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust should_panic">use std::env;
 
 fn main() {
