--- a/ch12-06-writing-to-stderr-instead-of-stdout.html
+++ b/ch12-06-writing-to-stderr-instead-of-stdout.html
@@ -208,7 +208,7 @@ prints error messages is in one function, <code>main</code>. The standard librar
 the <code>eprintln!</code> macro that prints to the standard error stream, so let’s change
 the two places we were calling <code>println!</code> to print errors to use <code>eprintln!</code>
 instead.</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><code class="language-rust ignore"><span class="boring">use std::env;
 </span><span class="boring">use std::process;
 </span><span class="boring">
@@ -244,7 +244,7 @@ redirect standard output to a file, like so:</p>
 </code></pre>
 <p>We won’t see any output to the terminal, and <em>output.txt</em> will contain our
 results:</p>
-<p><span class="filename">Filename: output.txt</span></p>
+<p><span class="filename">檔案名稱：output.txt</span></p>
 <pre><code class="language-text">Are you nobody, too?
 How dreary to be somebody!
 </code></pre>
