--- a/ch14-01-release-profiles.html
+++ b/ch14-01-release-profiles.html
@@ -193,7 +193,7 @@ aren’t any <code>[profile.*]</code> sections in the project’s <em>Cargo.toml
 <code>[profile.*]</code> sections for any profile you want to customize, you can override
 any subset of the default settings. For example, here are the default values
 for the <code>opt-level</code> setting for the <code>dev</code> and <code>release</code> profiles:</p>
-<p><span class="filename">Filename: Cargo.toml</span></p>
+<p><span class="filename">檔案名稱：Cargo.toml</span></p>
 <pre><code class="language-toml">[profile.dev]
 opt-level = 0
 
@@ -213,7 +213,7 @@ the default <code>opt-level</code> for the <code>release</code> profile is <code
 <em>Cargo.toml</em>. For example, if we want to use optimization level 1 in the
 development profile, we can add these two lines to our project’s <em>Cargo.toml</em>
 file:</p>
-<p><span class="filename">Filename: Cargo.toml</span></p>
+<p><span class="filename">檔案名稱：Cargo.toml</span></p>
 <pre><code class="language-toml">[profile.dev]
 opt-level = 1
 </code></pre>
