--- a/ch16-02-message-passing.html
+++ b/ch16-02-message-passing.html
@@ -196,7 +196,7 @@ results.</p>
 <p>First, in Listing 16-6, we’ll create a channel but not do anything with it.
 Note that this won’t compile yet because Rust can’t tell what type of values we
 want to send over the channel.</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><code class="language-rust ignore does_not_compile">use std::sync::mpsc;
 
 fn main() {
@@ -225,7 +225,7 @@ pieces of the tuple returned by <code>mpsc::channel</code>.</p>
 string so the spawned thread is communicating with the main thread, as shown in
 Listing 16-7. This is like putting a rubber duck in the river upstream or
 sending a chat message from one thread to another.</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">use std::sync::mpsc;
 use std::thread;
 
@@ -253,7 +253,7 @@ Chapter 9 to review strategies for proper error handling.</p>
 <p>In Listing 16-8, we’ll get the value from the receiving end of the channel in
 the main thread. This is like retrieving the rubber duck from the water at the
 end of the river or like getting a chat message.</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">use std::sync::mpsc;
 use std::thread;
 
@@ -303,7 +303,7 @@ an experiment to show how channels and ownership work together to prevent
 problems: we’ll try to use a <code>val</code> value in the spawned thread <em>after</em> we’ve
 sent it down the channel. Try compiling the code in Listing 16-9 to see why
 this code isn’t allowed:</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><code class="language-rust ignore does_not_compile">use std::sync::mpsc;
 use std::thread;
 
@@ -357,7 +357,7 @@ two separate threads were talking to each other over the channel. In Listing
 16-10 we’ve made some modifications that will prove the code in Listing 16-8 is
 running concurrently: the spawned thread will now send multiple messages and
 pause for a second between each message.</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">use std::sync::mpsc;
 use std::thread;
 use std::time::Duration;
@@ -411,7 +411,7 @@ the spawned thread.</p>
 single consumer</em>. Let’s put <code>mpsc</code> to use and expand the code in Listing 16-10
 to create multiple threads that all send values to the same receiver. We can do
 so by cloning the transmitting half of the channel, as shown in Listing 16-11:</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">use std::sync::mpsc;
 </span><span class="boring">use std::thread;
 </span><span class="boring">use std::time::Duration;
