--- a/ch19-05-advanced-functions-and-closures.html
+++ b/ch19-05-advanced-functions-and-closures.html
@@ -179,7 +179,7 @@ functions. Functions coerce to the type <code>fn</code> (with a lowercase f), no
 confused with the <code>Fn</code> closure trait. The <code>fn</code> type is called a <em>function
 pointer</em>. The syntax for specifying that a parameter is a function pointer is
 similar to that of closures, as shown in Listing 19-27.</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn add_one(x: i32) -&gt; i32 {
     x + 1
 }
