--- a/appendix-04-useful-development-tools.html
+++ b/appendix-04-useful-development-tools.html
@@ -189,7 +189,7 @@ on <code>rustfmt</code>, see <a href="https://github.com/rust-lang/rustfmt">its 
 <p>The rustfix tool is included with Rust installations and can automatically fix
 some compiler warnings. If you’ve written code in Rust, you’ve probably seen
 compiler warnings. For example, consider this code:</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn do_something() {}
 
 fn main() {
@@ -222,7 +222,7 @@ apply that suggestion using the <code>rustfix</code> tool by running the command
 </code></pre>
 <p>When we look at <em>src/main.rs</em> again, we’ll see that <code>cargo fix</code> has changed the
 code:</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn do_something() {}
 
 fn main() {
@@ -245,7 +245,7 @@ common mistakes and improve your Rust code.</p>
 </code></pre>
 <p>For example, say you write a program that uses an approximation of a
 mathematical constant, such as pi, as this program does:</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
     let x = 3.1415;
     let r = 8.0;
@@ -266,7 +266,7 @@ mathematical constant, such as pi, as this program does:</p>
 that your program would be more correct if you used the constant instead. You
 would then change your code to use the <code>PI</code> constant. The following code
 doesn’t result in any errors or warnings from Clippy:</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
     let x = std::f64::consts::PI;
     let r = 8.0;
