--- a/ch01-02-hello-world.html
+++ b/ch01-02-hello-world.html
@@ -190,7 +190,7 @@ $ cd hello_world
 <h3><a class="header" href="#編寫並執行-rust-程式" id="編寫並執行-rust-程式">編寫並執行 Rust 程式</a></h3>
 <p>接著，請產生一個原始文件並叫做 <em>main.rs</em>。Rust 的文件檔案都會以 <em>.rs</em> 副檔名稱作爲結尾。如果你用到不止一個單字的話，請用底線區隔開來。比方說，請使用 <em>hello_world.rs</em> 而不是 <em>helloworld.rs</em>。</p>
 <p>現在請開啓 <em>main.rs</em> 文件然而後輸入範例 1-1 中的程式碼。</p>
-<p><span class="filename">Filename: main.rs</span></p>
+<p><span class="filename">檔案名稱：main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
     println!(&quot;Hello, world!&quot;);
 }
