--- a/ch03-04-comments.html
+++ b/ch03-04-comments.html
@@ -191,14 +191,14 @@ single line, you’ll need to include <code>//</code> on each line, like this:</
 <span class="boring">}
 </span></code></pre></pre>
 <p>Comments can also be placed at the end of lines containing code:</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
     let lucky_number = 7; // I’m feeling lucky today
 }
 </code></pre></pre>
 <p>But you’ll more often see them used in this format, with the comment on a
 separate line above the code it’s annotating:</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
     // I’m feeling lucky today
     let lucky_number = 7;
