--- a/ch07-05-separating-modules-into-different-files.html
+++ b/ch07-05-separating-modules-into-different-files.html
@@ -176,7 +176,7 @@ file to make the code easier to navigate.</p>
 crate root file so it contains the code shown in Listing 7-21. In this case,
 the crate root file is <em>src/lib.rs</em>, but this procedure also works with binary
 crates whose crate root file is <em>src/main.rs</em>.</p>
-<p><span class="filename">Filename: src/lib.rs</span></p>
+<p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><code class="language-rust ignore">mod front_of_house;
 
 pub use crate::front_of_house::hosting;
@@ -191,7 +191,7 @@ pub fn eat_at_restaurant() {
 body will be in <em>src/front_of_house.rs</em></span></p>
 <p>And <em>src/front_of_house.rs</em> gets the definitions from the body of the
 <code>front_of_house</code> module, as shown in Listing 7-22.</p>
-<p><span class="filename">Filename: src/front_of_house.rs</span></p>
+<p><span class="filename">檔案名稱：src/front_of_house.rs</span></p>
 <pre><code class="language-rust ignore">pub mod hosting {
     pub fn add_to_waitlist() {}
 }
@@ -203,13 +203,13 @@ Rust to load the contents of the module from another file with the same name as
 the module. To continue with our example and extract the <code>hosting</code> module to
 its own file as well, we change <em>src/front_of_house.rs</em> to contain only the
 declaration of the <code>hosting</code> module:</p>
-<p><span class="filename">Filename: src/front_of_house.rs</span></p>
+<p><span class="filename">檔案名稱：src/front_of_house.rs</span></p>
 <pre><code class="language-rust ignore">pub mod hosting;
 </code></pre>
 <p>Then we create a <em>src/front_of_house</em> directory and a file
 <em>src/front_of_house/hosting.rs</em> to contain the definitions made in the
 <code>hosting</code> module:</p>
-<p><span class="filename">Filename: src/front_of_house/hosting.rs</span></p>
+<p><span class="filename">檔案名稱：src/front_of_house/hosting.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
