--- a/ch09-01-unrecoverable-errors-with-panic.html
+++ b/ch09-01-unrecoverable-errors-with-panic.html
@@ -190,7 +190,7 @@ panic = 'abort'
 </code></pre>
 </blockquote>
 <p>Let’s try calling <code>panic!</code> in a simple program:</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust should_panic panics">fn main() {
     panic!(&quot;crash and burn&quot;);
 }
@@ -220,7 +220,7 @@ backtrace is in more detail next.</p>
 from a library because of a bug in our code instead of from our code calling
 the macro directly. Listing 9-1 has some code that attempts to access an
 element by index in a vector.</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust should_panic panics">fn main() {
     let v = vec![1, 2, 3];
 
