--- a/ch10-02-traits.html
+++ b/ch10-02-traits.html
@@ -191,7 +191,7 @@ that might be stored in a <code>NewsArticle</code> or <code>Tweet</code> instanc
 need a summary from each type, and we need to request that summary by calling a
 <code>summarize</code> method on an instance. Listing 10-12 shows the definition of a
 <code>Summary</code> trait that expresses this behavior.</p>
-<p><span class="filename">Filename: src/lib.rs</span></p>
+<p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -221,7 +221,7 @@ headline, the author, and the location to create the return value of
 <code>summarize</code>. For the <code>Tweet</code> struct, we define <code>summarize</code> as the username
 followed by the entire text of the tweet, assuming that tweet content is
 already limited to 280 characters.</p>
-<p><span class="filename">Filename: src/lib.rs</span></p>
+<p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -317,7 +317,7 @@ each method’s default behavior.</p>
 <p>Listing 10-14 shows how to specify a default string for the <code>summarize</code> method
 of the <code>Summary</code> trait instead of only defining the method signature, as we did
 in Listing 10-12.</p>
-<p><span class="filename">Filename: src/lib.rs</span></p>
+<p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -782,7 +782,7 @@ add <code>Copy</code> to the trait bounds of <code>T</code>! Listing 10-15 shows
 a generic <code>largest</code> function that will compile as long as the types of the
 values in the slice that we pass into the function implement the <code>PartialOrd</code>
 <em>and</em> <code>Copy</code> traits, like <code>i32</code> and <code>char</code> do.</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn largest&lt;T: PartialOrd + Copy&gt;(list: &amp;[T]) -&gt; T {
     let mut largest = list[0];
 
@@ -829,7 +829,7 @@ traits. For example, the type <code>Pair&lt;T&gt;</code> in Listing 10-16 always
 <code>new</code> function. But <code>Pair&lt;T&gt;</code> only implements the <code>cmp_display</code> method if its
 inner type <code>T</code> implements the <code>PartialOrd</code> trait that enables comparison <em>and</em>
 the <code>Display</code> trait that enables printing.</p>
-<p><span class="filename">Filename: src/lib.rs</span></p>
+<p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
