--- a/ch12-02-reading-a-file.html
+++ b/ch12-02-reading-a-file.html
@@ -175,7 +175,7 @@ small amount of text over multiple lines with some repeated words. Listing 12-3
 has an Emily Dickinson poem that will work well! Create a file called
 <em>poem.txt</em> at the root level of your project, and enter the poem “I’m Nobody!
 Who are you?”</p>
-<p><span class="filename">Filename: poem.txt</span></p>
+<p><span class="filename">檔案名稱：poem.txt</span></p>
 <pre><code class="language-text">I’m nobody! Who are you?
 Are you nobody, too?
 Then there’s a pair of us - don’t tell!
@@ -190,7 +190,7 @@ To an admiring bog!
 case</span></p>
 <p>With the text in place, edit <em>src/main.rs</em> and add code to read the file, as
 shown in Listing 12-4.</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust should_panic">use std::env;
 use std::fs;
 
