--- a/ch13-01-closures.html
+++ b/ch13-01-closures.html
@@ -190,7 +190,7 @@ it once so we don’t make the user wait more than necessary.</p>
 <code>simulated_expensive_calculation</code> shown in Listing 13-1, which will print
 <code>calculating slowly...</code>, wait for two seconds, and then return whatever number
 we passed in.</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">use std::thread;
 use std::time::Duration;
 
@@ -218,7 +218,7 @@ high-intensity workout</li>
 </ul>
 <p>The output will be the recommended workout plan. Listing 13-2 shows the <code>main</code>
 function we’ll use.</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">use std::thread;
 </span><span class="boring">use std::time::Duration;
 </span><span class="boring">
@@ -249,7 +249,7 @@ with the simulated input values.</p>
 <code>generate_workout</code> in Listing 13-3 contains the business logic of the
 app that we’re most concerned with in this example. The rest of the code
 changes in this example will be made to this function.</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">use std::thread;
 </span><span class="boring">use std::time::Duration;
 </span><span class="boring">
@@ -316,7 +316,7 @@ to call it if the result isn’t needed, and we still want to call it only once.
 <p>We could restructure the workout program in many ways. First, we’ll try
 extracting the duplicated call to the <code>simulated_expensive_calculation</code>
 function into a variable, as shown in Listing 13-4.</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">use std::thread;
 </span><span class="boring">use std::time::Duration;
 </span><span class="boring">
@@ -364,7 +364,7 @@ the <code>if</code> blocks, we can define a closure and store the <em>closure</e
 rather than storing the result of the function call, as shown in Listing 13-5.
 We can actually move the whole body of <code>simulated_expensive_calculation</code> within
 the closure we’re introducing here.</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">use std::thread;
 </span><span class="boring">use std::time::Duration;
 </span><span class="boring">
@@ -421,7 +421,7 @@ closure to execute the code and get the resulting value. We call a closure like
 we do a function: we specify the variable name that holds the closure
 definition and follow it with parentheses containing the argument values we
 want to use, as shown in Listing 13-6.</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">use std::thread;
 </span><span class="boring">use std::time::Duration;
 </span><span class="boring">
@@ -485,7 +485,7 @@ available.</p>
 explicitness and clarity at the cost of being more verbose than is strictly
 necessary. Annotating the types for the closure we defined in Listing 13-5
 would look like the definition shown in Listing 13-7.</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">use std::thread;
 </span><span class="boring">use std::time::Duration;
 </span><span class="boring">
@@ -545,7 +545,7 @@ parameter. This closure isn’t very useful except for the purposes of this
 example. Note that we haven’t added any type annotations to the definition: if
 we then try to call the closure twice, using a <code>String</code> as an argument the
 first time and a <code>u32</code> the second time, we’ll get an error.</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><code class="language-rust ignore does_not_compile"><span class="boring">fn main() {
 </span>    let example_closure = |x| x;
 
@@ -608,7 +608,7 @@ case, our closure has a parameter of type <code>u32</code> and returns a <code>u
 trait bound we specify is <code>Fn(u32) -&gt; u32</code>.</p>
 <p>Listing 13-9 shows the definition of the <code>Cacher</code> struct that holds a closure
 and an optional result value.</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">struct Cacher&lt;T&gt;
 where
     T: Fn(u32) -&gt; u32,
@@ -640,7 +640,7 @@ the result of the closure again, instead of executing the closure again, the
 <code>Cacher</code> will return the result held in the <code>Some</code> variant.</p>
 <p>The logic around the <code>value</code> field we’ve just described is defined in Listing
 13-10.</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">struct Cacher&lt;T&gt;
 </span><span class="boring">where
 </span><span class="boring">    T: Fn(u32) -&gt; u32,
@@ -693,7 +693,7 @@ again.</p>
 returns the value as well.</p>
 <p>Listing 13-11 shows how we can use this <code>Cacher</code> struct in the function
 <code>generate_workout</code> from Listing 13-6.</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">use std::thread;
 </span><span class="boring">use std::time::Duration;
 </span><span class="boring">
@@ -877,7 +877,7 @@ have: they can capture their environment and access variables from the scope in
 which they’re defined.</p>
 <p>Listing 13-12 has an example of a closure stored in the <code>equal_to_x</code> variable
 that uses the <code>x</code> variable from the closure’s surrounding environment.</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
     let x = 4;
 
@@ -895,7 +895,7 @@ variable in its enclosing scope</span></p>
 same scope that <code>equal_to_x</code> is defined in.</p>
 <p>We can’t do the same with functions; if we try with the following example, our
 code won’t compile:</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><code class="language-rust ignore does_not_compile">fn main() {
     let x = 4;
 
@@ -962,7 +962,7 @@ concurrency. For now, here’s the code from Listing 13-12 with the <code>move</
 keyword added to the closure definition and using vectors instead of integers,
 because integers can be copied rather than moved; note that this code will not
 yet compile.</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><code class="language-rust ignore does_not_compile">fn main() {
     let x = vec![1, 2, 3];
 
