--- a/ch15-03-drop.html
+++ b/ch15-03-drop.html
@@ -191,7 +191,7 @@ let’s implement <code>drop</code> with <code>println!</code> statements for no
 functionality is that it will print <code>Dropping CustomSmartPointer!</code> when the
 instance goes out of scope. This example demonstrates when Rust runs the <code>drop</code>
 function.</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">struct CustomSmartPointer {
     data: String,
 }
@@ -252,7 +252,7 @@ if you want to force a value to be dropped before the end of its scope.</p>
 <p>If we try to call the <code>Drop</code> trait’s <code>drop</code> method manually by modifying the
 <code>main</code> function from Listing 15-14, as shown in Listing 15-15, we’ll get a
 compiler error:</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><code class="language-rust ignore does_not_compile"><span class="boring">struct CustomSmartPointer {
 </span><span class="boring">    data: String,
 </span><span class="boring">}
@@ -306,7 +306,7 @@ a value to be cleaned up early, we can use the <code>std::mem::drop</code> funct
 trait. We call it by passing the value we want to force to be dropped early as
 an argument. The function is in the prelude, so we can modify <code>main</code> in Listing
 15-15 to call the <code>drop</code> function, as shown in Listing 15-16:</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">struct CustomSmartPointer {
 </span><span class="boring">    data: String,
 </span><span class="boring">}
