--- a/ch17-03-oo-design-patterns.html
+++ b/ch17-03-oo-design-patterns.html
@@ -196,7 +196,7 @@ should remain an unpublished draft.</p>
 <p>Listing 17-11 shows this workflow in code form: this is an example usage of the
 API we’ll implement in a library crate named <code>blog</code>. This won’t compile yet
 because we haven’t implemented the <code>blog</code> crate yet.</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><code class="language-rust ignore does_not_compile">use blog::Post;
 
 fn main() {
@@ -241,7 +241,7 @@ instance of <code>Post</code>, as shown in Listing 17-12. We’ll also make a pr
 <code>State</code> trait. Then <code>Post</code> will hold a trait object of <code>Box&lt;dyn State&gt;</code>
 inside an <code>Option&lt;T&gt;</code> in a private field named <code>state</code>. You’ll see why the
 <code>Option&lt;T&gt;</code> is necessary in a bit.</p>
-<p><span class="filename">Filename: src/lib.rs</span></p>
+<p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -286,7 +286,7 @@ blog post. We implement this as a method rather than exposing the <code>content<
 field as <code>pub</code>. This means we can implement a method later that will control
 how the <code>content</code> field’s data is read. The <code>add_text</code> method is pretty
 straightforward, so let’s add the implementation in Listing 17-13 to the <code>impl Post</code> block:</p>
-<p><span class="filename">Filename: src/lib.rs</span></p>
+<p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">pub struct Post {
 </span><span class="boring">    state: Option&lt;Box&lt;dyn State&gt;&gt;,
 </span><span class="boring">    content: String,
@@ -332,7 +332,7 @@ requirement: always returning an empty string slice. We’ll change this later
 once we implement the ability to change a post’s state so it can be published.
 So far, posts can only be in the draft state, so the post content should always
 be empty. Listing 17-14 shows this placeholder implementation:</p>
-<p><span class="filename">Filename: src/lib.rs</span></p>
+<p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">pub struct Post {
 </span><span class="boring">    state: Option&lt;Box&lt;dyn State&gt;&gt;,
 </span><span class="boring">    content: String,
@@ -371,7 +371,7 @@ works as intended.</p>
 <h3><a class="header" href="#requesting-a-review-of-the-post-changes-its-state" id="requesting-a-review-of-the-post-changes-its-state">Requesting a Review of the Post Changes Its State</a></h3>
 <p>Next, we need to add functionality to request a review of a post, which should
 change its state from <code>Draft</code> to <code>PendingReview</code>. Listing 17-15 shows this code:</p>
-<p><span class="filename">Filename: src/lib.rs</span></p>
+<p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">pub struct Post {
 </span><span class="boring">    state: Option&lt;Box&lt;dyn State&gt;&gt;,
 </span><span class="boring">    content: String,
@@ -464,7 +464,7 @@ Listing 17-11 now works up to line 10!</p>
 <p>The <code>approve</code> method will be similar to the <code>request_review</code> method: it will
 set <code>state</code> to the value that the current state says it should have when that
 state is approved, as shown in Listing 17-16:</p>
-<p><span class="filename">Filename: src/lib.rs</span></p>
+<p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -560,7 +560,7 @@ the post should stay in the <code>Published</code> state in those cases.</p>
 <p>Now we need to update the <code>content</code> method on <code>Post</code>: if the state is
 <code>Published</code>, we want to return the value in the post’s <code>content</code> field;
 otherwise, we want to return an empty string slice, as shown in Listing 17-17:</p>
-<p><span class="filename">Filename: src/lib.rs</span></p>
+<p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><code class="language-rust ignore does_not_compile"><span class="boring">pub struct Post {
 </span><span class="boring">    state: Option&lt;Box&lt;dyn State&gt;&gt;,
 </span><span class="boring">    content: String,
@@ -662,7 +662,7 @@ called on the type that implements the <code>State</code> trait. That means we n
 <code>content</code> to the <code>State</code> trait definition, and that is where we’ll put the
 logic for what content to return depending on which state we have, as shown in
 Listing 17-18:</p>
-<p><span class="filename">Filename: src/lib.rs</span></p>
+<p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -825,7 +825,7 @@ outside code has no knowledge of them, we’ll encode the states into different
 types. Consequently, Rust’s type checking system will prevent attempts to use
 draft posts where only published posts are allowed by issuing a compiler error.</p>
 <p>Let’s consider the first part of <code>main</code> in Listing 17-11:</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><code class="language-rust ignore"><span class="boring">use blog::Post;
 </span><span class="boring">
 </span>fn main() {
@@ -850,7 +850,7 @@ doesn’t exist. As a result, it will be impossible for us to accidentally
 display draft post content in production, because that code won’t even compile.
 Listing 17-19 shows the definition of a <code>Post</code> struct and a <code>DraftPost</code> struct,
 as well as methods on each:</p>
-<p><span class="filename">Filename: src/lib.rs</span></p>
+<p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -905,7 +905,7 @@ these constraints by adding another struct, <code>PendingReviewPost</code>, defi
 <code>request_review</code> method on <code>DraftPost</code> to return a <code>PendingReviewPost</code>, and
 defining an <code>approve</code> method on <code>PendingReviewPost</code> to return a <code>Post</code>, as
 shown in Listing 17-20:</p>
-<p><span class="filename">Filename: src/lib.rs</span></p>
+<p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -976,7 +976,7 @@ the returned instances. We also can’t have the assertions about the draft and
 pending review post’s contents be empty strings, nor do we need them: we can’t
 compile code that tries to use the content of posts in those states any longer.
 The updated code in <code>main</code> is shown in Listing 17-21:</p>
-<p><span class="filename">Filename: src/main.rs</span></p>
+<p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><code class="language-rust ignore">use blog::Post;
 
 fn main() {
